--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
   <!--Fin Portada-->
 
+  <!--Menu-->
+  <nav class="menu">
+    <a href="#">Servicios</a>
+    <a href="#">¿Quiénes Somos?</a>
+    <a href="#">Centro de asistencia</a>
+    <a href="#">Contactos</a>
+    
+</nav>
+<!--Fin menu-->
+
 </body>
 </html>
 <script src="js/main.js"></script>
