--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
 </nav>
 <!--Fin menu-->
 
+<!--Bucador-->
+<center>
+    <section class="webdesigntuts-workshop">
+        <form action="" method="">		    
+            <input type="search" placeholder="Buscar...">		    	
+            <button>Buscar</button>
+        </form>
+    </section>
+    </center>
+    <!--Fin buscador-->
+    
 </body>
 </html>
 <script src="js/main.js"></script>
