--- a/index.html
+++ b/index.html
@@ -42,6 +42,64 @@
     </section>
     </center>
     <!--Fin buscador-->
+
+    <!--productos-->
+    <div class="row productos">
+        <article class="col-12 text-center">
+            <h2 class="subtitulo"><span>Lo que ofrecemos</span></h2>
+            <p class="titulo">Nuestros Produtos</p>
+            <p>  C. A. FASHION TRENDS es una pagina dedicada a la venta de productos cosmeticos y prendas de  vestir. Aqui podras encontrar desde un pintalabios hasta los zapatos de tus sueños.  Nuestra pagina es la mejor opcion de comprar productos y elegir tu estilo. </p>
+        </article>
+
+        <div class="col-12">
+            <div class="row justify-content-center">
+                <article class="col-6 col-lg-3 py-1">
+                    <figure class="producto">
+                        <img src="img/ink.png" class="img-fluid" alt="">
+                        <figcaption class="overlay">
+                            <p class="overlay-texto1">La elegancia no consiste en ponerse unn nuevo vestido.</p>
+                        </figcaption>
+                    </figure>
+                </article>
+
+                <article class="col-6 col-lg-3 py-1">
+                    <figure class="producto">
+                        <img src="img/maq.jpg" class="img-fluid" alt="">
+                        <figcaption class="overlay">
+                            <p class="overlay-texto">El maquillaje es arte, la belleza es espiritu.</p>
+                        </figcaption>
+                    </figure>
+                </article>
+
+                <article class="col-6 col-lg-3 py-1">
+                    <figure class="producto">
+                        <img src="img/WhatsApp Image 2021-04-06 at 9.47.13 AM.jpeg" class="img-fluid" alt="">
+                        <figcaption class="overlay">
+                            <p class="overlay-texto1">Lo más importante de un vestido es quien lo lleva.</p>
+                        </figcaption>
+                    </figure>
+                </article>
+
+                <article class="col-6 col-lg-3 py-1">
+                    <figure class="producto">
+                        <img src="img/na2.jpg" class="img-fluid" alt="">
+                        <figcaption class="overlay">
+                            <p class="overlay-texto">Luces, Maquillaje, Cámara y Acción.</p>
+                        </figcaption>
+                    </figure>
+                </article>
+
+                <button class="d-block btn-productos">Todos los productos</button>
+            </div>
+        </div>
+    </div>
+</main>
+
+
+   
+<!--fin productos-->
+
+
     
 </body>
 </html>
