--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <!--Menu-->
   <nav class="menu">
     <a href="#">Servicios</a>
-    <a href="#">¿Quiénes Somos?</a>
-    <a href="#">Centro de asistencia</a>
-    <a href="#">Contactos</a>
+    <a href="file:///C:/Users/A19C37603/Desktop/ventura/C.-A.-FASHION-TRENDS-/quienessomos.html">¿Quiénes Somos?</a>
+    <a href="file:///C:/Users/A19C37603/Desktop/ventura/C.-A.-FASHION-TRENDS-/centrodeasistencia.html">Centro de asistencia</a>
+    <a href="file:///C:/Users/A19C37603/Desktop/ventura/C.-A.-FASHION-TRENDS-/contactos.html">Contactos</a>
     
 </nav>
 <!--Fin menu-->
@@ -48,7 +48,7 @@
         <article class="col-12 text-center">
             <h2 class="subtitulo"><span>Lo que ofrecemos</span></h2>
             <p class="titulo">Nuestros Produtos</p>
-            <p>  C. A. FASHION TRENDS es una pagina dedicada a la venta de productos cosmeticos y prendas de  vestir. Aqui podras encontrar desde un pintalabios hasta los zapatos de tus sueños.  Nuestra pagina es la mejor opcion de comprar productos y elegir tu estilo. </p>
+            <p>  C. A. FASHION TRENDS es una pagina dedicada a la venta de productos cosmeticos y prendas de  vestir. Aqui podras encontrar desde un labial hasta los zapatos de tus sueños.  Nuestra pagina es la mejor opcion para comprar productos y elegir tu estilo. </p>
         </article>
 
         <div class="col-12">
@@ -57,7 +57,7 @@
                     <figure class="producto">
                         <img src="img/ink.png" class="img-fluid" alt="">
                         <figcaption class="overlay">
-                            <p class="overlay-texto1">La elegancia no consiste en ponerse unn nuevo vestido.</p>
+                            <p class="overlay-texto1">La elegancia no consiste en ponerse un nuevo vestido.</p>
                         </figcaption>
                     </figure>
                 </article>
