--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!--Menu-->
   <nav class="menu">
     <a href="#">Servicios</a>
-    <a href="#">¿Quiénes Somos?</a>
+    <a href="quienessomos.html">¿Quiénes Somos?</a>
     <a href="#">Centro de asistencia</a>
     <a href="#">Contactos</a>
     <a href="#">Sugerencias</a>
