Centro de asistencia

--- a/index.html
+++ b/index.html
@@ -25,18 +25,13 @@
   <!--Menu-->
   <nav class="menu">
     <a href="#">Servicios</a>
-<<<<<<< HEAD
-    <a href="quienessomos.html">¿Quiénes Somos?</a>
-    <a href="#">Centro de asistencia</a>
-    <a href="#">Contactos</a>
-    <a href="#">Sugerencias</a>
-=======
-    <a href="file:///C:/Users/A19C37603/Desktop/ventura/C.-A.-FASHION-TRENDS-/quienessomos.html">¿Quiénes Somos?</a>
-    <a href="file:///C:/Users/A19C37603/Desktop/ventura/C.-A.-FASHION-TRENDS-/centrodeasistencia.html">Centro de asistencia</a>
-    <a href="file:///C:/Users/A19C37603/Desktop/ventura/C.-A.-FASHION-TRENDS-/contactos.html">Contactos</a>
-    <a href="file:///C:/Users/A19C37603/Desktop/ventura/C.-A.-FASHION-TRENDS-/sugerencias.html">Sugerencias</a>
 
->>>>>>> origin/carolinv
+    <a href="quienessomos.html">¿Quiénes Somos?</a>
+    <a href="centrodeasistencia.html">Centro de asistencia</a>
+    <a href="contactos.html">Contactos</a>
+    <a href="sugerencias.html">Sugerencias</a>
+
+
     
 </nav>
 <!--Fin menu-->
