--- a/centrodeasistencia.html
+++ b/centrodeasistencia.html
@@ -15,17 +15,30 @@
     <h1 class="tituloca">  ---  Centro de asistencia  --- </h1>
     </center>
 
-
-    <!--Bucador-->
+<!--Bucador-->
 <center>
-    <section class="webdesigntuts-workshop">
-        <form action="" method="">		    
-            <input type="search" placeholder="¿En que podemos ayudarte?">		    	
-            <button>Buscar</button>
+    <header>
+        <div class="logo">
+            <p>C.A-FASHION-TRENDS</p>
+        </div>
+        <form action="">
+            <input type="text" class="barra-busqueda" id="barra-busqueda" placeholder="Buscar">
         </form>
-    </section>
+        <div class="categorias" id="categorias">
+            <a href="contactos.html" class="activo">Contactos</a>
+            <a href="problemasalhacerpedidos.html" class="activo">Problemas</a>
+            <a href="politicasyprivacidad.html" class="activo">Politicas y privacidad</a>
+        </div>
+        
+    </head>   
     </center>
     <!--Fin buscador-->
+
+<!------------------------- */
+/* Buscador */
+/* ------------------------->
+
+
     
     <div class="contenedor1">
         <a href="quienessomos.html">
