--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                     </figure>
                 </article>
 
-                <button class="d-block btn-productos">Todos los productos</button>
+                <button class="d-block btn-productos"> <a href="maquillaje.html"> Maquillajes </a></button>
+                <button class="d-block btn-productos"> <a href="ropas.html"> Prendas de vestir </a></button>
             </div>
         </div>
     </div>
